--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ const questions = [
     texto: "1) Você conhece os sítios arqueológicos de Parintins?",
     alternativas: ["Sim", "Não"],
     resposta: null,
-    fundo: "imagens/mapa_parintins.jpg"
+    fundo: "mapa_parintins.jpg"
   },
   {
     tipo: "pergunta",
@@ -335,3 +335,4 @@ loadQuestion();
 </script>
 </body>
 </html>
+
