--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ const questions = [
   {
     tipo: "pergunta",
     texto: "2) Que tipo de artefatos são mais comumente encontrados nos sítios arqueológicos de Parintins?",
-    alternativasImg: ["imagens/fragmentos.jpg", "imagens/mumia.jpg"],
+    alternativasImg: ["fragmentos.jpg", "mumia.jpg"],
     resposta: 0,
-    fundo: "imagens/fragmentos.jpg"
+    fundo: "fragmentos.jpg"
   },
   {
     tipo: "pergunta",
@@ -117,31 +117,31 @@ const questions = [
       "Ciência que estuda vestígios deixados por povos antigos, como cerâmicas, ferramentas e construções. Em Parintins, ela investiga modos de vida indígenas anteriores à colonização."
     ],
     resposta: 1,
-    fundo: "imagens/fundo_arqueologia.jpg"
+    fundo: "fundo_arqueologia.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "Parintins abriga um dos sítios arqueológicos mais importantes da Amazônia, o Sítio do Macurany, com milhares de fragmentos de cerâmica antiga.",
-    imagens: ["imagens/rio.jpg"]
+    imagens: ["rio.jpg"]
   },
   {
     tipo: "pergunta",
     texto: "4) Qual é o nome do principal sítio arqueológico de Parintins?",
     alternativas: ["Sítio Macurany", "Sítio Aninga", "Sítio Parananema"],
     resposta: 0,
-    fundo: "imagens/sitio_macurany.jpg"
+    fundo: "sitio_macurany.jpg"
   },
   {
     tipo: "pergunta",
     texto: "5) Que tipo de vestígio arqueológico é mais comum no Sítio do Macurany?",
     alternativasImg: ["imagens/farao.jpg", "imagens/pesquisadora.jpg"],
     resposta: 1,
-    fundo: "imagens/konduri.jpg"
+    fundo: "konduri.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "As cerâmicas Konduri são conhecidas por seus desenhos e formas elaboradas — muitas vezes feitas para rituais e sepultamentos.",
-    imagens: ["imagens/ceramica.jpg"]
+    imagens: ["ceramica.jpg"]
   },
   {
     tipo: "pergunta",
@@ -152,12 +152,12 @@ const questions = [
       "Porque está paralela ao monte Roraima."
     ],
     resposta: 0,
-    fundo: "imagens/orla_antiga.jpg"
+    fundo: "orla_antiga.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "Essas comunidades antigas escolhiam locais elevados e férteis — chamadas de 'terra preta de índio' — para viver e cultivar.",
-    imagens: ["imagens/sitio.jpg"]
+    imagens: ["sitio.jpg"]
   },
   {
     tipo: "pergunta",
@@ -167,12 +167,12 @@ const questions = [
       "Não tem relevância histórica ou cultural."
     ],
     resposta: 0,
-    fundo: "imagens/raizes.jpg"
+    fundo: "raizes.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "O Projeto de extensão 'Na Trilha do Patrimônio Arqueológico' envolve alunos da rede municipal e privada para conhecer e cuidar desses sítios.",
-    imagens: ["imagens/amostra1.jpg", "imagens/amostra2.jpg"]
+    imagens: ["amostra1.jpg", "amostra2.jpg"]
   },
   {
     tipo: "pergunta",
@@ -182,12 +182,12 @@ const questions = [
       "A construção irregular, o desmatamento, o avanço urbano e o vandalismo."
     ],
     resposta: 1,
-    fundo: "imagens/ameaças.jpg"
+    fundo: "ameaças.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "Em alguns locais, fragmentos arqueológicos acabam sendo destruídos por obras sem acompanhamento técnico.",
-    imagens: ["imagens/escavacao.jpg"]
+    imagens: ["escavacao.jpg"]
   },
   {
     tipo: "pergunta",
@@ -198,12 +198,12 @@ const questions = [
       "Ambas refletem a identidade e a memória cultural da região — a arqueologia revela o passado indígena, enquanto o festival mantém vivas as tradições e mitos amazônicos."
     ],
     resposta: 2,
-    fundo: "imagens/festa_dos_bois.jpg"
+    fundo: "festa_dos_bois.jpg"
   },
   {
     tipo: "curiosidade",
     texto: "Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.",
-    imagens: ["imagens/caprichoso.jpg", "imagens/garantido.jpg"]
+    imagens: ["caprichoso.jpg", "garantido.jpg"]
   },
   {
     tipo: "pergunta",
@@ -213,7 +213,7 @@ const questions = [
       "Não. A compra e venda de objetos arqueológicos é crime, assim como realizar escavações sem autorização do IPHAN (Lei nº 3.924/1961). Caso encontre materiais arqueológicos, entre em contato pelo e-mail: iphan-am@iphan.gov.br ou gepia@uea.edu.br."
     ],
     resposta: 1,
-    fundo: "imagens/nao-pode_vender.jpg"
+    fundo: "nao-pode_vender.jpg"
   }
 ];
 
@@ -335,4 +335,5 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
