--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ const questions = [
   {
     tipo: "pergunta",
     texto: "5) Que tipo de vestígio arqueológico é mais comum no Sítio do Macurany?",
-    alternativasImg: ["imagens/farao.jpg", "imagens/pesquisadora.jpg"],
+    alternativasImg: ["farao.jpg", "pesquisadora.jpg"],
     resposta: 1,
     fundo: "konduri.jpg"
   },
@@ -335,5 +335,6 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
