--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ const questions = [
     texto: "2) Que tipo de artefatos são mais comumente encontrados nos sítios arqueológicos de Parintins?",
     alternativasImg: ["fragmentos.jpg", "mumia.jpg"],
     resposta: 0,
-    fundo: "fragmentos.jpg"
+    fundo: "castanheira.jpg"
   },
   {
     tipo: "pergunta",
@@ -335,6 +335,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
