--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ function showParabens() {
   document.querySelector(".overlay").style.background = "rgba(0,0,0,0.55)";
   document.getElementById("quiz-container").innerHTML = `
     <h2 class="center">🎉 Parabéns, você concluiu o quiz! 🎉</h2>
-    <div class="center"><img src="imagens/parabens.jpg" style="max-width:80%"></div>
+    <div class="center"><img src="parabens.jpg" style="max-width:80%"></div>
     <div class="center"><button onclick="location.reload()">Recomeçar</button></div>
   `;
 }
@@ -335,6 +335,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
