--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ const questions = [
     texto: "1) Você conhece os sítios arqueológicos de Parintins?",
     alternativas: ["Sim", "Não"],
     resposta: null,
-    imagens: [mapa_parintins.jpg"]
-    fundo:"mapa_parintins.jpg"
+    imagens: ["mapa_parintins.jpg"],
+    fundo:  "mapa_parintins.jpg"
   },
   {
     tipo: "pergunta",
@@ -336,6 +336,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
