--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
   .center {
     text-align: center;
   }
+   #curiosidade img {
+    display: block;
+    margin: 15px auto;
+    max-width: 90%;
+    border-radius: 12px;
+  }
 </style>
 </head>
 <body>
@@ -335,6 +341,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
