--- a/index.html
+++ b/index.html
@@ -81,11 +81,18 @@
   .center {
     text-align: center;
   }
-   #curiosidade img {
+   #curiosidade{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     text-align: center;
+  }
+    #curiosidade img {
     display: block;
     margin: 15px auto;
     max-width: 90%;
     border-radius: 12px;
+    box-shadow: 0 0 10px rgba(255,255,255,0.1);
   }
 </style>
 </head>
@@ -341,6 +348,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
