--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(255,255,255,0.1);
   }
+  #curiosidade6 img {
+  width: 600px;       /* largura fixa */
+  height: 350px;      /* altura fixa */
+  object-fit: cover;  /* corta proporcionalmente sem distorcer */
+  border-radius: 12px;
+  margin: 10px;
+  box-shadow: 0 0 10px rgba(255,255,255,0.1);
+}
+
+/* Centralizar as duas imagens juntas */
+#curiosidade6 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -359,6 +375,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
