--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
     <button id="next-btn">Responder</button>
   </div>
 </div>
+<div id="curiosidade6" class="curiosidade">
+  <p>Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.</p>
+
+  <div class="imagens-curiosidade6">
+    <img src="imagens/boi1.jpg" alt="Boi Caprichoso">
+    <img src="imagens/boi2.jpg" alt="Boi Garantido">
+  </div>
+</div>
 
 <script>
 const questions = [
@@ -375,6 +383,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
