--- a/index.html
+++ b/index.html
@@ -121,14 +121,6 @@
     <button id="next-btn">Responder</button>
   </div>
 </div>
-<div id="curiosidade6" class="curiosidade">
-  <p>Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.</p>
-
-  <div class="imagens-curiosidade6">
-    <img src="imagens/boi1.jpg" alt="Boi Caprichoso">
-    <img src="imagens/boi2.jpg" alt="Boi Garantido">
-  </div>
-</div>
 
 <script>
 const questions = [
@@ -242,6 +234,14 @@ const questions = [
     texto: "Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.",
     imagens: ["caprichoso.jpg", "garantido.jpg"]
   },
+  <div id="curiosidade6" class="curiosidade">
+  <p>Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.</p>
+
+  <div class="imagens-curiosidade6">
+    <img src="boi1.jpg" alt="Boi Caprichoso">
+    <img src="boi2.jpg" alt="Boi Garantido">
+  </div>
+</div>
   {
     tipo: "pergunta",
     texto: "10) Se uma pessoa encontrar materiais arqueológicos, pode vender?",
@@ -383,6 +383,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
