--- a/index.html
+++ b/index.html
@@ -81,13 +81,15 @@
   .center {
     text-align: center;
   }
-   #curiosidade{
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     text-align: center;
+
+  /* Estilos gerais das curiosidades */
+  #curiosidade{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
-    #curiosidade img {
+  #curiosidade img {
     display: block;
     margin: 15px auto;
     max-width: 90%;
@@ -95,26 +97,21 @@
     box-shadow: 0 0 10px rgba(255,255,255,0.1);
   }
 
-  /* 👇 CSS ESPECIAL: apenas para a curiosidade 6 (Caprichoso e Garantido) */
+  /* 🔹 Estilo especial apenas para a curiosidade 6 (Caprichoso e Garantido) */
   #curiosidade6 {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /* coloca um embaixo do outro */
     align-items: center;
     text-align: center;
   }
-  #curiosidade6 .duas-imagens {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    margin-top: 15px;
-    flex-wrap: wrap;
-  }
-  #curiosidade6 .duas-imagens img {
-    width: 300px; /* tamanho igual para as duas imagens */
-    height: 220px;
-    object-fit: cover;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(255,255,255,0.1);
+
+  #curiosidade6 img {
+    width: 650px;    /* mais largo */
+    height: auto;    /* mantém proporção */
+    max-width: 90%;
+    margin: 20px 0;
+    border-radius: 15px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.15);
   }
 </style>
 </head>
@@ -238,7 +235,7 @@ const questions = [
   {
     tipo: "curiosidade",
     texto: "Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.",
-    imagens: ["caprichoso.jpg", "garantido.jpg"]
+    imagens: ["caprichoso.jpg", "garantido.jpg"] // curiosidade 6
   },
   {
     tipo: "pergunta",
@@ -271,46 +268,28 @@ function loadQuestion() {
   if (q.tipo === "curiosidade") {
     questionEl.textContent = "Curiosidade:";
 
-    // 👇 SEÇÃO ESPECIAL: curiosidade 6 (índice 14)
+    const curiosidadeDiv = document.createElement("div");
+
+    // 🔹 ALTERAÇÃO AQUI: caso seja a curiosidade 6 (Caprichoso e Garantido)
     if (current === 14) {
-      const curiosidadeDiv = document.createElement("div");
       curiosidadeDiv.id = "curiosidade6";
+    } else {
+      curiosidadeDiv.id = "curiosidade";
+    }
 
-      const p = document.createElement("p");
-      p.textContent = q.texto;
-      curiosidadeDiv.appendChild(p);
+    const p = document.createElement("p");
+    p.textContent = q.texto;
+    curiosidadeDiv.appendChild(p);
 
-      const imgContainer = document.createElement("div");
-      imgContainer.className = "duas-imagens";
-
+    if (q.imagens) {
       q.imagens.forEach(imgPath => {
         const img = document.createElement("img");
         img.src = imgPath;
-        imgContainer.appendChild(img);
+        curiosidadeDiv.appendChild(img);
       });
-
-      curiosidadeDiv.appendChild(imgContainer);
-      contentEl.appendChild(curiosidadeDiv);
-    } else {
-      // todas as outras curiosidades
-      const curiosidadeDiv = document.createElement("div");
-      curiosidadeDiv.id = "curiosidade";
-
-      const p = document.createElement("p");
-      p.textContent = q.texto;
-      curiosidadeDiv.appendChild(p);
-
-      if (q.imagens) {
-        q.imagens.forEach(imgPath => {
-          const img = document.createElement("img");
-          img.src = imgPath;
-          curiosidadeDiv.appendChild(img);
-        });
-      }
-
-      contentEl.appendChild(curiosidadeDiv);
     }
 
+    contentEl.appendChild(curiosidadeDiv);
     nextBtn.textContent = current === questions.length - 1 ? "Concluir" : "Próximo";
     nextBtn.onclick = nextQuestion;
     return;
@@ -400,5 +379,3 @@ loadQuestion();
 </script>
 </body>
 </html>
-
-
