--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ const questions = [
   {
     tipo: "curiosidade",
     texto: "Os bois-bumbás Caprichoso e Garantido frequentemente incorporam elementos da história amazônica e indígena em suas alegorias e temas.",
-    imagens: ["caprichoso.jpg", "garantido.jpg"] // curiosidade 6
+    imagens: ["caprichoso.jpg", "boi_garantido2.webp"] // curiosidade 6
   },
   {
     tipo: "pergunta",
@@ -379,3 +379,4 @@ loadQuestion();
 </script>
 </body>
 </html>
+
