--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ const questions = [
     texto: "1) Você conhece os sítios arqueológicos de Parintins?",
     alternativas: ["Sim", "Não"],
     resposta: null,
-    fundo:  "mapa_parintins.jpg"
+    fundo:  "mapa_parintins2.png"
   },
   {
     tipo: "pergunta",
@@ -379,4 +379,5 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
