--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ const questions = [
     texto: "4) Qual é o nome do principal sítio arqueológico de Parintins?",
     alternativas: ["Sítio Macurany", "Sítio Aninga", "Sítio Parananema"],
     resposta: 0,
-    fundo: "sitio_macurany.jpg"
+    fundo: "sitio_macurany.png"
   },
   {
     tipo: "pergunta",
@@ -379,5 +379,6 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
